--- a/04-design_componentes_acessibilidade/src/app/app.component.html
+++ b/04-design_componentes_acessibilidade/src/app/app.component.html
@@ -1,8 +1,12 @@
 <main>
   <h1>Form</h1>
   <!-- Se o input tiver o mesmo nome do output com o sufixo Change, pode fazer o two-way data bind -->
-  <app-yes-no-button-group
-    [(value)]="yesNoAswer"
-    label="Are you good enough in Angular?"
-  ></app-yes-no-button-group>
+  <!-- Usando o ngSubmit evita que a página dê um refresh caso ocorra erro -->
+  <form [formGroup]="form" (ngSubmit)="submit()">
+    <app-yes-no-button-group
+      formControlName="yesNoAswer"
+      label="Are you good enough in Angular?"
+    ></app-yes-no-button-group>
+    <button>Submit</button>
+  </form>
 </main>
