--- a/04-design_componentes_acessibilidade/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
+++ b/04-design_componentes_acessibilidade/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
@@ -1,6 +1,8 @@
-<div class="button-group">
-  <label class="label">{{ label }}</label>
+<div role="radiogroup" [attr.aria-labelledby]="id" class="button-group">
+  <label [attr.id]="id" class="label">{{ label }}</label>
   <button
+    role="radio"
+    [attr.aria-checked]="isValue(options.YES)"
     class="button button-yes"
     [class.button-pressed]="isValue(options.YES)"
     type="button"
@@ -9,6 +11,8 @@
     Yes
   </button>
   <button
+    role="radio"
+    [attr.aria-checked]="isValue(options.YES)"
     class="button button-no"
     [class.button-pressed]="isValue(options.NO)"
     type="button"
