Aula 05 - Disable Control Directive

--- a/04-design_componentes_acessibilidade/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
+++ b/04-design_componentes_acessibilidade/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
@@ -10,6 +10,7 @@
     role="radio"
     class="button button-yes"
     type="button"
+    [attr.disabled]="disabled ? disabled : null"
     [attr.aria-checked]="isValue(options.YES)"
     [attr.tabindex]="isValue(options.YES) || value === null ? 0 : -1"
     [class.button-pressed]="isValue(options.YES)"
@@ -23,6 +24,7 @@
     role="radio"
     class="button button-no"
     type="button"
+    [attr.disabled]="disabled ? disabled : null"
     [attr.aria-checked]="isValue(options.NO)"
     [attr.tabindex]="isValue(options.NO) || value === null ? 0 : -1"
     [class.button-pressed]="isValue(options.NO)"
