--- a/04-design_componentes_acessibilidade/src/app/app.component.html
+++ b/04-design_componentes_acessibilidade/src/app/app.component.html
@@ -4,6 +4,7 @@
   <!-- Usando o ngSubmit evita que a página dê um refresh caso ocorra erro -->
   <form [formGroup]="form" (ngSubmit)="submit()">
     <app-yes-no-button-group
+      [appDisableControl]="false"
       formControlName="yesNoAswer"
       label="Are you good enough in Angular?"
     ></app-yes-no-button-group>
