Aula 02 - Componente Modal

--- a/05-design_componentes_acessibilidade_2/src/app/app.component.html
+++ b/05-design_componentes_acessibilidade_2/src/app/app.component.html
@@ -19,6 +19,12 @@
 
   <div class="button-group">
     <button type="button" class="button button-primary">Submit</button>
-    <button type="button" class="button button-secondary">Cancel</button>
+    <button
+      type="button"
+      class="button button-secondary"
+      (click)="modalRef.close()"
+    >
+      Cancel
+    </button>
   </div>
 </ng-template>
