--- a/05-design_componentes_acessibilidade_2/src/app/shared/components/modal/modal.component.html
+++ b/05-design_componentes_acessibilidade_2/src/app/shared/components/modal/modal.component.html
@@ -1,1 +1,7 @@
-<p>modal works!</p>
+<div class="modal-overlay">
+  <div class="modal-content">
+    <h1 class="modal-title">{{ config.title }}</h1>
+    <!-- Renderiza o templateRef passado nas configurações -->
+    <ng-container *ngTemplateOutlet="config.templateRef"></ng-container>
+  </div>
+</div>
