--- a/05-design_componentes_acessibilidade_2/src/app/app.component.html
+++ b/05-design_componentes_acessibilidade_2/src/app/app.component.html
@@ -17,6 +17,11 @@
     <input type="text" id="age" />
   </div>
 
+  <label for="info">Subscribe</label>
+  <input id="info" type="checkbox" (change)="info = !info" />
+  <!-- Aplica a animação @fade no evento do ngIf -->
+  <p [@fade] *ngIf="info">This is a placeholder</p>
+
   <div class="button-group">
     <button type="button" class="button button-primary">Submit</button>
     <button
