Aula 04 - Fechar modal com ESC

--- a/05-design_componentes_acessibilidade_2/src/app/shared/components/modal/modal.component.html
+++ b/05-design_componentes_acessibilidade_2/src/app/shared/components/modal/modal.component.html
@@ -1,4 +1,8 @@
-<div class="modal-overlay" (click)="modalRef.close()">
+<div
+  class="modal-overlay"
+  (click)="modalRef.close()"
+  (keydown.esc)="modalRef.close()"
+>
   <div appFocusTrap class="modal-content" (click)="$event.stopPropagation()">
     <h1 class="modal-title">{{ config.title }}</h1>
     <!-- Renderiza o templateRef passado nas configurações -->
