Aula 04 - Diretiva FocusBack

--- a/05-design_componentes_acessibilidade_2/src/app/shared/components/modal/modal.component.html
+++ b/05-design_componentes_acessibilidade_2/src/app/shared/components/modal/modal.component.html
@@ -3,7 +3,12 @@
   (click)="modalRef.close()"
   (keydown.esc)="modalRef.close()"
 >
-  <div appFocusTrap class="modal-content" (click)="$event.stopPropagation()">
+  <div
+    appFocusTrap
+    appFocusBack
+    class="modal-content"
+    (click)="$event.stopPropagation()"
+  >
     <h1 class="modal-title">{{ config.title }}</h1>
     <!-- Renderiza o templateRef passado nas configurações -->
     <ng-container *ngTemplateOutlet="config.templateRef"></ng-container>
