--- a/05-design_componentes_acessibilidade_2/src/app/app.component.html
+++ b/05-design_componentes_acessibilidade_2/src/app/app.component.html
@@ -4,32 +4,82 @@
   Show Modal
 </button>
 <ng-template #modal>
-  <div class="form-field">
-    <label for="firstName">First Name</label>
-    <input type="text" id="firstName" [(value)]="firstName" />
-  </div>
-  <div class="form-field">
-    <label for="surname">Surname</label>
-    <input type="text" id="surname" />
-  </div>
-  <div class="form-field">
-    <label for="age">Age</label>
-    <input type="text" id="age" />
-  </div>
+  <form [formGroup]="form" (ngSubmit)="submit()">
+    <div class="form-field">
+      <label for="firstName">First Name</label>
+      <input
+        type="text"
+        id="firstName"
+        formControlName="firstName"
+        aria-describedby="firstName-error"
+        [attr.aria-invalid]="form.get('firstName').invalid"
+      />
+      <span
+        id="firstName-error"
+        class="validation-error"
+        *ngIf="form.get('firstName')?.errors?.required"
+      >
+        First Name is required
+      </span>
+    </div>
+    <div class="form-field">
+      <label for="surname">Surname</label>
+      <input
+        type="text"
+        id="surname"
+        formControlName="surname"
+        aria-describedby="surname-error"
+        [attr.aria-invalid]="form.get('surname').invalid"
+      />
+      <span
+        id="surname-error"
+        class="validation-error"
+        *ngIf="form.get('surname')?.errors?.required"
+        >Surname is required</span
+      >
+    </div>
+    <div class="form-field">
+      <label for="age">Age</label>
+      <input
+        type="text"
+        id="age"
+        formControlName="age"
+        aria-describedby="age-error"
+        [attr.aria-invalid]="form.get('age').invalid"
+      />
+      <span
+        id="age-error"
+        class="validation-error"
+        *ngIf="form.get('age')?.errors?.required"
+        >Age is required</span
+      >
+    </div>
 
-  <label for="info">Subscribe</label>
-  <input id="info" type="checkbox" (change)="info = !info" />
-  <!-- Aplica a animação @fade no evento do ngIf -->
-  <p [@fade] *ngIf="info">This is a placeholder</p>
+    <label for="info">Subscribe</label>
+    <input
+      id="info"
+      type="checkbox"
+      (change)="info = !info"
+      formControlName="info"
+    />
+    <!-- Aplica a animação @fade no evento do ngIf -->
+    <p [@fade] *ngIf="info">This is a placeholder</p>
 
-  <div class="button-group">
-    <button type="button" class="button button-primary">Submit</button>
-    <button
-      type="button"
-      class="button button-secondary"
-      (click)="modalRef.close()"
-    >
-      Cancel
-    </button>
-  </div>
+    <div class="button-group">
+      <button
+        [attr.aria-disabled]="form.invalid"
+        type="button"
+        class="button button-primary"
+      >
+        Submit
+      </button>
+      <button
+        type="button"
+        class="button button-secondary"
+        (click)="modalRef.close()"
+      >
+        Cancel
+      </button>
+    </div>
+  </form>
 </ng-template>
